--- a/src/index.html
+++ b/src/index.html
@@ -7,25 +7,9 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <div class="calendar">
-      <div class="
-        calendar__day
-        calendar__day--start-day"
-        >
-        <p class="
-          calendar__num
-          calendar__num--day--1"
-        ></p>
-      </div>
-      <div class="
-        calendar__day
-        calendar__day--start-day--tue"
-        >
-        <p class="
-          calendar__num
-          calendar__num--day--2"
-        ></p>
-      </div>
+    <div class="calendar calendar--start-day--sun calendar--month-length--31">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
