--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,37 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar calendar--month-length--29 calendar--start-day--thu">
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+      <div class="calendar__cell"></div>
+    </div>
   </body>
 </html>
