Remove conflicting class

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,9 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="page-content">
+  <body>
     <div class="
       calendar
-      page-content__calendar
       calendar--start-day-sun
       calendar--month-length-31
     ">
