--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" class="page">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
     <title>Calendar</title>
   </head>
 
-  <body class="page__body">
+  <body class="page">
     <div class="page__container">
       <div class="calendar calendar--start-day-sun calendar--month-length-31">
         <div class="calendar__day"></div>
