--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en" class="page">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
