bugs with calendar fixed

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="calendar">
+      <div class="calendar calendar--month-length-28 calendar--start-day-wed">
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
@@ -53,3 +53,4 @@
     </div>
   </body>
 </html>
+
