--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     />
   </head>
   <body class="body">
-    <div class="calendar">
+    <div class="calendar
+      calendar--start-day--sun
+      calendar--month-length--31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
