--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -13,6 +16,40 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <main class="main">
+      <div class="frame frame--start-day-sun frame--month-length-31">
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+        <div class="frame__day"></div>
+      </div>
+    </main>
   </body>
 </html>
