Every block has own file

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
-<html
-  lang="en"
-  class="page"
->
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -13,42 +10,72 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="./styles/index.scss"
     />
   </head>
   <body>
     <main class="main">
       <div class="frame frame--start-day-sun frame--month-length-31">
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
+
         <div class="frame__day"></div>
       </div>
     </main>
