--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
+      crossorigin="anonymous"
     />
     <title>Calendar</title>
     <link
