add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,44 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="./styles/index.scss"
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <main class="main">
+      <div class="cell cell--start-day-sun cell--month-length-31">
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+        <div class="cell__day"></div>
+      </div>
+    </main>
   </body>
 </html>
