add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
       href="/src/styles/index.scss"
     />
   </head>
-  <body data-qa="calendar-body">
-    <div class="calendar calendar--month-length-31">
-      <div class="calendar__day calendar__day--sun"></div>
+  <body>
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
