--- a/src/index.html
+++ b/src/index.html
@@ -1,50 +1,50 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
-    >
+    />
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
-    >
+      href="styles/main.scss"
+    />
   </head>
   <body>
-    <div class="calendar calendar--month-length--29 calendar--start-day--san">
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
-      <div class="calendar_block"></div>
+    <div class="calendar calendar--month-length-31 calendar--start-day-sun">
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
