add new task solution

--- a/src/index.html
+++ b/src/index.html
@@ -14,38 +14,38 @@
   </head>
   <body>
     <main class="main">
-      <div class="cell cell--start-day-sun cell--month-length-31">
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
-        <div class="cell__day"></div>
+      <div class="calendar calendar--start-day-sun calendar--month-length-31">
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
       </div>
     </main>
   </body>
