--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,112 @@
       href="styles/index.scss"
     />
   </head>
+
   <body>
-    <h1>Calendar</h1>
+    <div class="main-main">
+      <div class="main-box">
+        <div class="calendar calendar--month-length-31 calendar--start-day-sun">
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+        </div>
+      </div>
+
+      <div class="main-box">
+        <div class="calendar calendar--month-length-29 calendar--start-day-sun">
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+        </div>
+      </div>
+
+      <div class="main-box">
+        <div class="calendar calendar--month-length-29 calendar--start-day-wen">
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+          <div class="calendar calendar__day--calendar"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
