--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     />
   </head>
   <body class="page__body">
-    <div class="calendar calendar--start-day--sun calendar--month-length--31">
+    <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
