--- a/src/index.html
+++ b/src/index.html
@@ -14,109 +14,39 @@
   </head>
 
   <body>
-    <div class="main-main">
-      <div class="main-box">
-        <div class="calendar calendar--month-length-31 calendar--start-day-sun">
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-        </div>
-      </div>
-
-      <div class="main-box">
-        <div class="calendar calendar--month-length-29 calendar--start-day-sun">
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-        </div>
-      </div>
-
-      <div class="main-box">
-        <div class="calendar calendar--month-length-29 calendar--start-day-wen">
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-          <div class="calendar calendar__day--calendar"></div>
-        </div>
+    <div class="main-box">
+      <div class="calendar calendar--start-day-sun calendar--month-length-31">
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
       </div>
     </div>
   </body>
