--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,40 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="container">
+      <div class="calendar calendar--start-day-sun calendar--month-length-31">
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+        <div class="box-of-day"></div>
+      </div>
+    </div>
   </body>
 </html>
