--- a/src/index.html
+++ b/src/index.html
@@ -15,37 +15,37 @@
   <body>
     <div class="container">
       <div class="calendar calendar--start-day-sun calendar--month-length-31">
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
-        <div class="box-of-day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
       </div>
     </div>
   </body>
