--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-<!-- #region -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -13,43 +12,41 @@
       href="styles/index.scss"
     />
   </head>
-  <!-- #endregion -->
   <body class="page">
-    <!-- <h1 class="hidden">Calendar</h1> -->
     <div class="container">
-      <div class="calendar calendar--start-day-sun calendar--month-length-31">
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-        <div class="calendar__day"></div>
-      </div>
+      <ul class="calendar calendar--start-day-sun calendar--month-length-31">
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+        <li class="calendar__day"></li>
+      </ul>
     </div>
   </body>
 </html>
