created the basic markup and described the styles

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,44 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="styles/main.scss"
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <container class="container">
+      <ul class="container__calendar">
+        <li class="container__day container__day--1"></li>
+        <li class="container__day container__day--2"></li>
+        <li class="container__day container__day--3"></li>
+        <li class="container__day container__day--4"></li>
+        <li class="container__day container__day--5"></li>
+        <li class="container__day container__day--6"></li>
+        <li class="container__day container__day--7"></li>
+        <li class="container__day container__day--8"></li>
+        <li class="container__day container__day--9"></li>
+        <li class="container__day container__day--10"></li>
+        <li class="container__day container__day--11"></li>
+        <li class="container__day container__day--12"></li>
+        <li class="container__day container__day--13"></li>
+        <li class="container__day container__day--14"></li>
+        <li class="container__day container__day--15"></li>
+        <li class="container__day container__day--16"></li>
+        <li class="container__day container__day--17"></li>
+        <li class="container__day container__day--18"></li>
+        <li class="container__day container__day--19"></li>
+        <li class="container__day container__day--20"></li>
+        <li class="container__day container__day--21"></li>
+        <li class="container__day container__day--22"></li>
+        <li class="container__day container__day--23"></li>
+        <li class="container__day container__day--24"></li>
+        <li class="container__day container__day--25"></li>
+        <li class="container__day container__day--26"></li>
+        <li class="container__day container__day--27"></li>
+        <li class="container__day container__day--28"></li>
+        <li class="container__day container__day--29"></li>
+        <li class="container__day container__day--30"></li>
+        <li class="container__day container__day--31"></li>
+      </ul>
+    </container>
   </body>
 </html>
