--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
   <body>
     <div
     class="calendar
-    calendar--start-sun
-    calendar--month-length-29">
+    calendar--month-length-29
+    calendar--start-day-sun">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
