--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <ul class="calendar">
+    <ul class="calendar calendar--start-day--sun calendar--month-length--31">
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
