--- a/src/index.html
+++ b/src/index.html
@@ -14,130 +14,37 @@
   </head>
   <body>
     <div class="calendar calendar--start-day-sun calendar--month-length-31">
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
-      <a
-        href="#"
-        class="calendar__day"
-      ></a>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
