--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div class="calendar">
+    <div class="calendar calendar--month-lenght-31 calendar--start-day-sun">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
@@ -46,6 +46,5 @@
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
     </div>
-
   </body>
 </html>
