code refactoring with mentor requirements

--- a/src/index.html
+++ b/src/index.html
@@ -14,37 +14,37 @@
   </head>
   <body>
     <div class="calendar calendar--month-length-31 calendar--start-day-sun">
-      <div class="calendar__day calendar__day--d-1"></div>
-      <div class="calendar__day calendar__day--d-2"></div>
-      <div class="calendar__day calendar__day--d-3"></div>
-      <div class="calendar__day calendar__day--d-4"></div>
-      <div class="calendar__day calendar__day--d-5"></div>
-      <div class="calendar__day calendar__day--d-6"></div>
-      <div class="calendar__day calendar__day--d-7"></div>
-      <div class="calendar__day calendar__day--d-8"></div>
-      <div class="calendar__day calendar__day--d-9"></div>
-      <div class="calendar__day calendar__day--d-10"></div>
-      <div class="calendar__day calendar__day--d-11"></div>
-      <div class="calendar__day calendar__day--d-12"></div>
-      <div class="calendar__day calendar__day--d-13"></div>
-      <div class="calendar__day calendar__day--d-14"></div>
-      <div class="calendar__day calendar__day--d-15"></div>
-      <div class="calendar__day calendar__day--d-16"></div>
-      <div class="calendar__day calendar__day--d-17"></div>
-      <div class="calendar__day calendar__day--d-18"></div>
-      <div class="calendar__day calendar__day--d-19"></div>
-      <div class="calendar__day calendar__day--d-20"></div>
-      <div class="calendar__day calendar__day--d-21"></div>
-      <div class="calendar__day calendar__day--d-22"></div>
-      <div class="calendar__day calendar__day--d-23"></div>
-      <div class="calendar__day calendar__day--d-24"></div>
-      <div class="calendar__day calendar__day--d-25"></div>
-      <div class="calendar__day calendar__day--d-26"></div>
-      <div class="calendar__day calendar__day--d-27"></div>
-      <div class="calendar__day calendar__day--d-28"></div>
-      <div class="calendar__day calendar__day--d-29"></div>
-      <div class="calendar__day calendar__day--d-30"></div>
-      <div class="calendar__day calendar__day--d-31"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
+      <div class="calendar__day"></div>
     </div>
   </body>
 </html>
