--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <ul class="calendar">
+    <ol class="calendar calendar--start-day-sun calendar--month-length-31">
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
@@ -45,6 +45,6 @@
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
       <li class="calendar__day"></li>
-    </ul>
+    </ol>
   </body>
 </html>
