Calendar.Second try

--- a/src/index.html
+++ b/src/index.html
@@ -1,54 +1,48 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Calendar</title>
-    <link
-      rel="stylesheet"
-      href="styles/reset.css"
-    />
-    <link
-      rel="stylesheet"
-      href="styles/index.scss"
-    />
-  </head>
-  <body>
-    <div class="calendar calendar--start-day-sun calendar--month-length-31">
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-      <div class="calendar__day"></div>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  />
+  <title>Calendar</title>
+  <link rel="stylesheet" href="styles/reset.css" />
+  <link rel="stylesheet" href="styles/index.scss" />
+</head>
+<body>
+<ul class="calendar calendar--start-day-sun calendar--month-length-31">
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+  <li class="calendar__day"></li>
+</ul>
+</body>
 </html>
