add basic markup and some styles

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,69 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <ul class="calendar">
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+
+      <li class="calendar__item"></li>
+      
+    </ul>
   </body>
 </html>
